Fix toList